--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p id="more-info-overview"></p>
     </div>
     <hr />
-    <div class="offcanvas-footer">
+    <div class="offcanvas-footer d-flex justify-content-between m-2 align-items-center">
       <p id="more-info-genres"></p>
       <div class="dropdown mt-3">
         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
