Cambio de nombre boton more

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p id="more-info-genres"></p>
       <div class="dropdown mt-3">
         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">
-          Dropdown button
+          More Info
         </button>
         <ul class="dropdown-menu p-3">
           <li><p class="dropdown-item" href="#">Year:</p> <em id="more-info-year"></em></li>
